Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-38218

Galera test failure on galera_bf_abort_flush_for_export

    XMLWordPrintable

Details

    • Not for Release Notes
    • Q1/2026 Galera Maintenance, Q1/2026 Galera Development

    Description

      galera.galera_bf_abort_flush_for_export  w1 [ fail ]
              Test ended at 2025-11-27 10:50:02
       
      CURRENT_TEST: galera.galera_bf_abort_flush_for_export
      mysqltest: At line 19: query 'SET SESSION wsrep_sync_wait = 0' failed: ER_QUERY_INTERRUPTED (1317): Query execution was interrupted
       
      The result from queries just before the failure was:
      connection node_2;
      connection node_1;
      CREATE TABLE t1 (f1 INTEGER PRIMARY KEY) ENGINE=InnoDB;
      connection node_2;
      SET AUTOCOMMIT=OFF;
      FLUSH TABLES t1 FOR EXPORT;
      connection node_1;
      INSERT INTO t1 VALUES (2);
      connection node_2;
      SET SESSION wsrep_sync_wait = 0;
      

      Attachments

        Activity

          People

            janlindstrom Jan Lindström
            janlindstrom Jan Lindström
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.